# tiny_lang

./: .gitignore  Cargo.toml  JUNK.md  README.md  TODO.md
docs/: JUNK.md
examples/: comments.tiny  condition.tiny  fibonacci.tiny  let_statement.tiny  libc.tiny  main.tiny  rule_30.tiny  simple_if.tiny  simple_tlet.ll  simple_tlet.tiny  struct.tiny  while.tiny
examples/ast/: rule_30.ast
examples/ll/: func.ll  if.ll  loop.ll  nested_if.ll  printf.ll  puts.ll  string.ll
src/: ast.rs  code.rs  env.rs  environment.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  llvm.rs  main.rs  native.rs  parser.rs  repl.rs  scope.rs
src/codegen/: README.md  llvm.rs  mod.rs  wasm.rs
src/lexer/: lexer.rs  logos_lexer.rs  mod.rs
src/lexer/snapshots/: tiny_lang__lexer__logos_lexer__tests__function_decl_and_call_logos.snap
src/parser/: chumsky_parser.rs  mod.rs
src/tests/: mod.rs  test_interpreter.rs  test_lexer.rs  test_logos_lexer.rs  test_parser.rs
src/tests/snapshots/: tiny_lang__tests__test_interpreter__does_assignment_works.snap  tiny_lang__tests__test_lexer__function_decl_and_call.snap  tiny_lang__tests__test_lexer__function_declaration.snap  tiny_lang__tests__test_lexer__lex_bitwise_operations.snap  tiny_lang__tests__test_lexer__lexing_char.snap  tiny_lang__tests__test_lexer__lexing_char.snap.new  tiny_lang__tests__test_lexer__lexing_string.snap  (+28 more)
src/tiny_ir/: mod.rs
src/tir/: mod.rs
std/: libc.tiny  main.tiny  string.tiny
syntax/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
syntax/syntaxes/: TinyLang.tmLanguage.json
web/: index.html
