[package]
name = "tiny_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
regex = "1.8.4"
env_logger = "0.10.0"
log = "0.4.19"
clap = { version = "4.3.11", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.30.0", features = ["yaml"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

